p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: app1-svc, port: { number: 80 } }
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: app2-svc, port: { number: 80 } }
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: app3-svc, port: { number: 80 } }
